# cosmos-dependencies

./: .dockerignore  .gitattributes  .gitignore  .mise.toml  .pre-commit-config-base.yaml  .pre-commit-config.yaml  .ruff.toml  .shellcheckrc  AGENTS.md  ATTRIBUTIONS.md  ATTRIBUTIONS.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  justfile  pyproject.toml  pyrefly.toml
.github/workflows/: pre-commit.yml
agents/: agent-guide.md  agent-workflow.md  release-safety.md
assets/: cu128_torch27.txt
assets/Cosmos-Predict2.5/: README.md
assets/Cosmos-Transfer2.5/: README.md
assets/cu128_torch27/: urls.txt
assets/cu128_torch28/: urls.txt
ci/: .pre-commit-config-base.yaml  check_docs_indices.py  check_docs_indices_test.py  check_index_manifests.py  check_index_manifests_test.py  check_package_build_contracts.py  check_package_build_contracts_test.py  check_package_docs.py  check_package_docs_test.py  check_release_artifacts.py  check_release_artifacts_test.py  check_toolchain.py  check_toolchain_test.py  gitleaks_tracked.sh  scan_release_artifacts.py  scan_release_artifacts_test.py  uv_audit.sh  uv_lock.sh  write_wheel_legal_sidecars.py  write_wheel_legal_sidecars_test.py
cosmos_dependencies/: build.py  build_test.py  index_manifest.py  package_metadata.py  package_metadata_test.py
docker/: entrypoint.sh
docs/agents/: agent-guide.md  agent-workflow.md  release-safety.md
docs/cosmos3-scratch/cosmos-dummy/: index.html
docs/cosmos3/cosmos-dummy/: index.html
docs/dev/: agent-guide.md  agent-workflow.md  legal-audit.md  release-safety.md
docs/v1.5.0/: index.html
docs/v1.6.0/: index.html
indices/cosmos3/: manifest.json
indices/cosmos3-scratch/: manifest.json
indices/v1.6.0/: manifest.json
just/check/: .just
just/docs/: .just
just/license/: .just
just/package/: .just
just/release/: .just
pai_deps/: build.py  build_test.py  index_manifest.py  package_metadata.py  package_metadata_test.py  release_artifacts.py
pai_deps/build_tools/: __init__.py  write_build_provenance.py
pai_deps/cli/: __init__.py  copy_release_assets.py  copy_release_assets_test.py  create_index.py  fix_wheel.py  package_info.py
(+123 files in other folders)
