# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "cosmos-dependencies"
version = "1.2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
build = [
    "cmake",
    "ninja",
    "numpy",
    "packaging",
    "pip",
    "setuptools",
    "wheel",
]

[dependency-groups]
dev = [
    "change-wheel-version>=0.6.0",
    "licensecheck>=2025.1.0",
    "parse>=1.20.2",
    "pip-licenses>=5.5.0",
    "pytest>=8.4.2",
    "tyro>=0.9.35",
    "wheel-filename>=1.4.2",
]
# Wheel packages for license check.
packages = [
    "apex",
    "decord",
    "flash-attn",
    "natten",
    "torch",
    "torchvision",
    "transformer-engine",
]

[tool.uv.sources]
apex = [{ index = "cosmos" }]
change-wheel-version = [{ git = "https://github.com/spectralflight/change_wheel_version.git", rev = "ae6432577b1b0c54af76d52e6328e214287f2db9" }]
decord = [{ index = "cosmos" }]
flash-attn = [{ index = "cosmos"}]
natten = [{ index = "cosmos" }]
torch = [{ index = "cosmos" }]
torchvision = [{ index = "cosmos" }]
transformer-engine = [{ index = "cosmos" }]

[[tool.uv.index]]
name = "cosmos"
url = "https://nvidia-cosmos.github.io/cosmos-dependencies/v1.2.0/cu128_torch27/simple"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = [
    "cosmos_dependencies",
]

[tool.hatch.build.targets.wheel]
packages = [
    "cosmos_dependencies",
]
